--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-resolver": "^5.0.1",
     "ember-simple-auth": "^1.9.2",
     "ember-source": "~3.12.0",
+    "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
     "emberfire": "^3.0.0-rc.6",
     "eslint-plugin-ember": "^6.2.0",
